--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-updates": "~0.25.15",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.2",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
@@ -54,6 +55,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
   }
 }
