--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-constants": "~16.0.1",
     "expo-dev-client": "~4.0.15",
     "expo-font": "~12.0.5",
+    "expo-image-picker": "~15.0.5",
     "expo-insights": "~0.7.0",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
@@ -35,6 +36,7 @@
     "expo-updates": "~0.25.15",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.2",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
@@ -44,8 +46,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.3.0",
-    "react-native-web": "~0.19.10",
-    "expo-image-picker": "~15.0.5"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -55,6 +56,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
   }
 }
