--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.43.4",
     "expo": "~51.0.8",
+    "expo-asset": "^10.0.8",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.10",
     "expo-constants": "~16.0.1",
@@ -45,7 +46,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.3.0",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
