add signin bg and additional styling

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-updates": "~0.25.15",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.2",
+    "lucide-react-native": "^0.394.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
