--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -26,6 +26,7 @@
     "expo-asset": "^10.0.8",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.10",
+    "expo-cli": "^4.0.17",
     "expo-constants": "~16.0.1",
     "expo-dev-client": "~4.0.15",
     "expo-font": "~12.0.7",
@@ -39,6 +40,7 @@
     "expo-updates": "~0.25.15",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.2",
+    "lottie-react-native": "6.7.0",
     "lucide-react-native": "^0.394.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -51,8 +53,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "zustand": "^4.5.2",
-    "lottie-react-native": "6.7.0"
+    "uri-scheme": "^1.2.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
