add summons page , fix parent view family name bug

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Students_Management",
-    "slug": "studentsmanagement",
+    "name": "Morasalty",
+    "slug": "morasalty",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
