fix app icon and splash screen, fix expo web bundling -still have the supabase error-

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Morasalty",
+    "name": "Morassalaty",
     "slug": "studentsmanagement",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -15,7 +15,7 @@
     
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.saiiiforg.studentsmanagement",
@@ -24,7 +24,7 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
